syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.template.springboot.backend.inbound.client.grpc";

message ClientRequest {
  string name = 1;
  string lastName = 2;
  string email = 3;
  string createAt = 4;
}

message ClientResponse {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string createAt = 5;
}

service ClientService {

  // unary - sync
  rpc createClient(ClientRequest) returns (ClientResponse) {};

  // server streaming - async

}